# ml_customer_churn

./: README.md  docker-compose.yml  mlflow.db  prefect.py  pyproject.toml  requirements.txt  run.py  setup.py
artifacts/1/8086c8c10e8748c495da436eaa235ece/artifacts/model/: MLmodel  conda.yaml  requirements.txt
config/: config.yaml  local.yaml  localstack.yaml  structure.yml
integrations/: storage.py
notebook/: notebook.ipynb
notebook/.ipynb_checkpoints/: notebook-checkpoint.ipynb
outputs_store/evaluate/: evaluation_metrics.json
outputs_store/model/: best_model_name
outputs_store/transformer/: transformer.pkl  ytest.csv  ytrain.csv
pipelines/: experiment_pipeline.py  training_pipeline.py
src/: __init__.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/core/: artifact_manager.py  config_manager.py  metedata_manager.py  mlstack.py
src/deployment/: Dockerfile  README.md  app.py  test.json  test.py
src/experiments/: model_production.py  model_register_tracking.py  model_stage.py
src/ml_customer_churn/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_stage.py  model_tracking.py  model_trainer.py
src/monitoring/: drift_detection.py
utils/: config_artifact_store.py
